<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearRowthree"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:id="@+id/linearRowtwo"
            android:layout_height="wrap_content"
            android:layout_weight="0.94" android:layout_width="0dp" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtTwo"
                android:layout_height="wrap_content"
                android:layout_weight="0.08" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true" android:text="@string/lbl_2"
                style="@style/txtMuliregular16" tools:text="@string/lbl_2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtStadiumTumor"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.92" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_stadium_tumor"
                style="@style/txtLatoregular16" tools:text="@string/lbl_stadium_tumor"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtThree"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_210pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.06" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true" android:text="@string/lbl_3"
            style="@style/txtLatoregular16_1" tools:text="@string/lbl_3"/>
    </LinearLayout>
</layout>
