<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameInstructionste"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_50">
        <ImageView android:id="@+id/imageImageSix"
            android:layout_gravity="start"
            android:layout_height="@dimen/_900pxv"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_image6_900x428}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image6_900x428"/>
        <LinearLayout android:id="@+id/linearColumnfirststep"
            android:layout_gravity="top|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_192pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_192pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackfirststep"
                android:layout_gravity="start"
                android:layout_height="@dimen/_128pxv"
                android:layout_marginEnd="@dimen/_99pxh"
                android:layout_marginStart="@dimen/_99pxh" android:layout_width="@dimen/_134pxh">
                <ImageView android:id="@+id/imageImageFourteen"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_128pxh"
                    android:layout_width="@dimen/_134pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image14}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image14"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtFirstStep"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_first_step"
                    style="@style/txtLatobold20" tools:text="@string/lbl_first_step"/>
            </FrameLayout>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_45pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_upload_brain_tu"
                style="@style/txtLatobold28" tools:text="@string/msg_upload_brain_tu"/>
            <ImageView android:id="@+id/imageImageEight"
                android:layout_gravity="end"
                android:layout_height="@dimen/_54pxh"
                android:layout_marginEnd="@dimen/_56pxh"
                android:layout_marginStart="@dimen/_56pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_width="@dimen/_238pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image8}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image8"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnClassify"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_23pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_23pxv"
                android:singleLine="true"
                android:text="@string/lbl_classify"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_classify"/>
        </LinearLayout>
    </FrameLayout>
</layout>
