<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearInvoice"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackarrowleft"
            android:layout_height="@dimen/_651pxv"
            android:layout_marginTop="@dimen/_97pxv" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearColumnarrowleft"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_68pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <ImageView android:id="@+id/imageCheckmark"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_66pxh"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_checkmark"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtTumorDetected"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_191pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_tumor_detected"
                    style="@style/txtLatobold36" tools:text="@string/lbl_tumor_detected"/>
            </LinearLayout>
            <FrameLayout android:id="@+id/frameStackunion"
                android:layout_gravity="bottom|center"
                android:layout_height="@dimen/_353pxv"
                android:layout_marginEnd="@dimen/_4pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_405pxh">
                <ImageView android:id="@+id/imageUnion"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_353pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_union"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_union"/>
                <LinearLayout android:id="@+id/linearColumnlightbulb"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_25pxv"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <ImageView android:id="@+id/imageLightbulb"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_22pxh"
                        android:layout_marginEnd="@dimen/_63pxh"
                        android:layout_marginStart="@dimen/_63pxh"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_lightbulb"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_lightbulb"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnone"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_19pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtOne"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:singleLine="true"
                            android:text="@string/lbl"
                            style="@style/txtMuliregular16" tools:text="@string/lbl"/>
                        <View android:background="@color/gray_300"
                            android:id="@+id/lineLine"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginEnd="@dimen/_1pxh"
                            android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_381pxh"/>
                        <LinearLayout android:gravity="start"
                            android:id="@+id/linearRowglioma"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_27pxv"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <LinearLayout
                                android:id="@+id/linearRowoneTwo"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_weight="0.7"
                                android:layout_width="0dp" android:orientation="horizontal">
                                <TextView android:ellipsize="end"
                                    android:id="@+id/txtOneTwo"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_1pxv"
                                    android:layout_weight="0.1"
                                    android:layout_width="0dp"
                                    android:lineSpacingExtra="@dimen/_3pxh"
                                    android:singleLine="true"
                                    android:text="@string/lbl_1"
                                    style="@style/txtMulishmuliregular16" tools:text="@string/lbl_1"/>
                                <TextView android:ellipsize="end"
                                    android:id="@+id/txtJenisTumor"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_1pxv"
                                    android:layout_marginStart="@dimen/_24pxh"
                                    android:layout_weight="0.9"
                                    android:layout_width="0dp"
                                    android:lineSpacingExtra="@dimen/_4pxh"
                                    android:singleLine="true"
                                    android:text="@string/lbl_jenis_tumor"
                                    style="@style/txtLatoregular16" tools:text="@string/lbl_jenis_tumor"/>
                            </LinearLayout>
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtGlioma"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_1pxv"
                                android:layout_marginStart="@dimen/_192pxh"
                                android:layout_weight="0.3"
                                android:layout_width="0dp"
                                android:lineSpacingExtra="@dimen/_4pxh"
                                android:singleLine="true"
                                android:text="@string/lbl_glioma"
                                style="@style/txtLatoregular16_1" tools:text="@string/lbl_glioma"/>
                        </LinearLayout>
                        <LinearLayout android:id="@+id/linearRowtwo"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16pxv"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerInvoice"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.98"
                                android:layout_width="0dp"
                                android:orientation="vertical"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                itemSpace="@{@dimen/_14pxh}"
                                tools:itemCount="5" tools:listitem="@layout/row_invoice"/>
                            <View
                                android:background="@drawable/rectangle_bg_gray_300_radius_4_5"
                                android:id="@+id/viewRectangleTwentyOne"
                                android:layout_height="@dimen/_156pxh"
                                android:layout_marginBottom="@dimen/_8pxv"
                                android:layout_marginStart="@dimen/_3pxh"
                                android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_9pxh"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtNEXT"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_182pxh"
            android:layout_marginStart="@dimen/_182pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_next"
            style="@style/txtLatoregular18" tools:text="@string/lbl_next"/>
    </LinearLayout>
</layout>
